tests/negative/semantic/self_outside_method/input.ci
void main() {
    print(toString(self) + "\n");
}
